Added max equips and quests to area stats.
Fixed body h-overflow on Chrome and FF by adding some error margin to the sizeMapGrid() calculation.

Changed notYetAcquired hotkey to 'z.'  'n' conflicted too much with Norfair.

Added a placeholder file for shops and stats.  Currently just displays a blank map.  Assigned hotkey 's' even though it conflicts with overworld 's'hop for now.

Fleshed out how stats are displayed in progress bars on area cards.  Really stoked at how well it's turning out.  Two more major bars to add along with "completed" border styling.

Add an internal method to hydrate all the tracker area stats on intial creation.

Added js redirect to index.html for faster response in prod.

Reordered tracker.areaMaps so that at least the numbered dungeons increase sequentially.  Eventually will need to add grid cell metadata for side and bottom cards layout.

--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,9 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 	<meta http-equiv="refresh" content="0; url=/Start">
-
+	<script>
+		window.location.href = "/Start";
+	</script>
 	<title>Z1M1 Tracker</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
